# tak-server

./: .dockerignore  .env  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.http
api/tak-server-api/: Cargo.toml
api/tak-server-api/src/: acl.rs  app.rs  auth.rs  client.rs  game.rs  jwt.rs  lib.rs  player.rs  rating.rs  seek.rs  ws.rs
api/tak-server-api/src/http/: event.rs  games_history.rs  mod.rs  rating.rs
api/tak-server-api/src/protocol/: json.rs  mod.rs  v2.rs
api/tak-server-api/src/protocol/json/: auth.rs  game.rs  game_list.rs  seek.rs  sudo.rs
api/tak-server-api/src/protocol/v2/: auth.rs  chat.rs  game.rs  game_list.rs  seek.rs  sudo.rs
api/tak-server-http-api/: Cargo.toml
api/tak-server-http-api/src/: event.rs  games_history.rs  lib.rs  rating.rs
api/tak-server-legacy-api/: Cargo.toml
api/tak-server-legacy-api/src/: acl.rs  app.rs  client.rs  lib.rs
deploy/: .env.example  .gitignore  Caddyfile  Caddyfile_prod  build.ps1  deploy.ps1  docker-compose.prod.yml  docker-compose.yml
deploy/bots/: docker-compose.yml
deploy/caddy/: Caddyfile.development  Caddyfile.production
deploy/ory/kratos/: .env.development  .env.production  bot.schema.json  kratos.env.development  kratos.env.production  kratos.yml  user.schema.json
docs/: architecture.md
domain/tak-core/: Cargo.toml
domain/tak-core/src/: game.rs  ptn.rs
domain/tak-server-app/: Cargo.toml
domain/tak-server-app/src/: lib.rs  util.rs
domain/tak-server-domain/: Cargo.toml
domain/tak-server-domain/src/: app.rs  chat.rs  event.rs  game.rs  game_history.rs  jwt.rs  lib.rs  player.rs  rating.rs  seek.rs
infra/tak-auth-ory/: Cargo.toml
infra/tak-auth-ory/src/: guest.rs  jwt.rs  lib.rs
infra/tak-auth-ory/src/ory/: api.rs  mod.rs
infra/tak-email-lettre/: Cargo.toml
infra/tak-email-lettre/src/: lib.rs
infra/tak-events-google-sheets/: Cargo.toml
infra/tak-events-google-sheets/src/: lib.rs
infra/tak-persistence-sea-orm/: Cargo.toml
infra/tak-persistence-sea-orm-entites/: Cargo.toml
infra/tak-persistence-sea-orm-entites/src/: game.rs  lib.rs  player_account_mapping.rs  profile.rs  rating.rs  stats.rs
infra/tak-persistence-sea-orm/src/: games.rs  lib.rs  player_account_mapping.rs  players.rs  profile.rs  ratings.rs  stats.rs
infra/tak-persistence-sea-orm/src/entity/: mod.rs  player.rs  player_account_mapping.rs  profile.rs  rating.rs
infra/tak-player-connection/: Cargo.toml
infra/tak-player-connection/src/: lib.rs
more-concurrent-maps/: Cargo.toml
more-concurrent-maps/src/: bijection.rs  lib.rs  multi.rs
more-dashmap/: Cargo.toml
more-dashmap/src/: lib.rs  many_many.rs  one_one.rs
ory/: docker-compose.yml
ory/kratos/: identity.schema.json  kratos.yml
persistence/tak-events-persistence/: Cargo.toml
persistence/tak-events-persistence/src/: lib.rs
persistence/tak-persistence-sea-orm/: Cargo.toml
persistence/tak-persistence-sea-orm/src/: games.rs  players.rs
persistence/tak-persistence-sea-orm/src/entity/: game.rs  player.rs
src/: app.rs  chat.rs  client.rs  compose.rs  email.rs  game.rs  jwt.rs  logs.rs  main.rs  player.rs  protocol.rs  seek.rs  util.rs
src/persistence/: games.rs  mod.rs  players.rs
src/protocol/: json.rs  mod.rs  v2.rs
src/protocol/json/: auth.rs  chat.rs  game.rs  game_list.rs  seek.rs  sudo.rs
src/protocol/v2/: auth.rs  chat.rs  game.rs  game_list.rs  seek.rs  sudo.rs
src/tak/: board.rs  game.rs  mod.rs  ptn.rs
tak-client/: Cargo.toml
tak-client/src/: lib.rs  main.rs  playtak.rs
tak-core/: Cargo.toml
tak-core/src/: asynchronous.rs  base.rs  board.rs  game.rs  lib.rs  ptn.rs  realtime.rs  request.rs
tak-persistence/: Cargo.toml
tak-persistence-mariadb/: Cargo.toml
tak-persistence-sea-orm/: Cargo.toml
tak-persistence-sea-orm/src/: games.rs  lib.rs  players.rs
tak-persistence-sea-orm/src/entity/: game.rs  player.rs
tak-persistence-sqlite/: Cargo.toml
tak-persistence-sqlite/src/: games.rs  lib.rs  players.rs
tak-persistence/src/: lib.rs
tak-persistence/src/mariadb/: mod.rs
tak-server-api/: Cargo.toml
tak-server-api/src/: client.rs  jwt.rs  lib.rs
tak-server-api/src/protocol/: json.rs  mod.rs  v2.rs
tak-server-api/src/protocol/json/: game.rs  game_list.rs  seek.rs  sudo.rs
tak-server-api/src/protocol/v2/: auth.rs  chat.rs  game.rs  game_list.rs  seek.rs  sudo.rs
tak-server-app/: Cargo.toml
tak-server-app/src/: lib.rs
tak-server-app/src/domain/: account.rs  chat.rs  event.rs  game.rs  game_history.rs  match.rs  mod.rs  moderation.rs  player.rs  profile.rs  rating.rs  seek.rs  spectator.rs  stats.rs
tak-server-app/src/domain/game/: request.rs
tak-server-app/src/ports/: authentication.rs  connection.rs  email.rs  mod.rs  notification.rs  player_mapping.rs  profile_information.rs
tak-server-app/src/processes/: disconnect_timeout_runner.rs  game_timeout_runner.rs  mod.rs
tak-server-app/src/services/: mod.rs  player_resolver.rs
tak-server-app/src/workflow/: mod.rs
tak-server-app/src/workflow/account/: cleanup_guests.rs  get_account.rs  get_online.rs  get_profile.rs  get_snapshot.rs  get_username.rs  mod.rs  moderate.rs  register.rs  remove_account.rs  set_online.rs  update_profile.rs
tak-server-app/src/workflow/chat/: message.rs  room.rs
tak-server-app/src/workflow/events/: list.rs
tak-server-app/src/workflow/gameplay/: do_action.rs  finalize_game.rs  get.rs  list.rs  mod.rs  timeout.rs
tak-server-app/src/workflow/history/: query.rs
tak-server-app/src/workflow/listener/: disconnect.rs
tak-server-app/src/workflow/matchmaking/: accept.rs  cancel.rs  create.rs  create_game.rs  get.rs  list.rs  mod.rs  rematch.rs
tak-server-app/src/workflow/player/: get_online.rs  get_rating.rs  get_stats.rs  mod.rs  notify_player.rs  set_online.rs
tak-server-domain/: Cargo.toml
tak-server-domain/src/: app.rs  chat.rs  email.rs  game.rs  game_history.rs  lib.rs  player.rs  rating.rs  seek.rs  transport.rs  util.rs
tak-server-http-api/: Cargo.toml
tak-server-http-api/src/: event.rs  games_history.rs  lib.rs
(+97 files in other folders)
