[package]
name = "tak-server"
version = "0.1.0"
edition = "2024"
default-run = "tak-server"

[workspace]
resolver = "3"
members = [
    "api/tak-server-api",
    # "api/tak-server-http-api",
    "tak-core",
    "tak-server-app",
    "more-dashmap",
    "tak-client",
    "infra/tak-persistence-sea-orm",
    "infra/tak-email-lettre",
    "infra/tak-events-google-sheets",
]

[dependencies]
dotenvy = "0.15.7"
log = "0.4.28"
log4rs = { version = "1.4.0", features = ["gzip"] }
tak-events-google-sheets = { path = "./infra/tak-events-google-sheets" }
tak-persistence-sea-orm = { path = "./infra/tak-persistence-sea-orm" }
tak-email-lettre = { path = "./infra/tak-email-lettre" }
tak-server-api = { path = "./api/tak-server-api" }
tak-server-app = { path = "./tak-server-app" }
# tak-server-http-api = { path = "./api/tak-server-http-api" }
tokio = { version = "1.47.1", features = ["full"] }
