[package]
name = "tak-server"
version = "0.1.0"
edition = "2024"
default-run = "tak-server"

[workspace]
resolver = "3"
members = [
    "api/tak-server-api",
    "infra/tak-auth-ory",
    "infra/tak-email-lettre",
    "infra/tak-events-google-sheets",
    "infra/tak-persistence-sea-orm",
    "infra/tak-persistence-sea-orm-entites",
    "more-dashmap",
    "tak-core",
    "tak-server-app",
]

[dependencies]
dotenvy = "0.15.7"
log = "0.4.28"
log4rs = { version = "1.4.0", features = ["gzip"] }
tak-auth-ory = { path = "./infra/tak-auth-ory" }
tak-email-lettre = { path = "./infra/tak-email-lettre" }
tak-events-google-sheets = { path = "./infra/tak-events-google-sheets" }
tak-persistence-sea-orm = { path = "./infra/tak-persistence-sea-orm" }
tak-server-api = { path = "./api/tak-server-api" }
tak-server-app = { path = "./tak-server-app" }
tokio = { version = "1.47.1", features = ["full"] }
