[package]
name = "tak-client"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
dashmap = "6.1.0"
uuid = { version = "1.18.1", features = ["v4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio-util = { version = "0.7.16", features = ["full"] }
thiserror = "2.0.16"
reqwest = "0.12.23"
