[package]
name = "tak-persistence-mariadb"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
tak-core = { path = "../tak-core" }
tak-server-domain = { path = "../tak-server-domain" }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
] }
