[package]
name = "tak-persistence-sea-orm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
tak-core = { path = "../tak-core" }
tak-server-domain = { path = "../tak-server-domain" }
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio = { version = "1.47.1", features = ["full"] }
dotenvy = "0.15.7"
bcrypt = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.42"
