[package]
name = "tak-persistence-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
tak-core = { path = "../tak-core" }
tak-server-domain = { path = "../tak-server-domain" }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "sqlite",
] }
tokio = { version = "1.47.1", features = ["full"] }
dotenvy = "0.15.7"
bcrypt = "0.17.1"
