[package]
name = "tak-server-api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["ws", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bcrypt = "0.17.1"
chrono = "0.4.42"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
lettre = "0.11.18"
moka = { version = "0.12.10", features = ["sync"] }
passwords = "3.1.16"
rand = "0.9.2"
rustrict = "0.7.36"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tokio-util = { version = "0.7.16", features = ["full"] }
tower-http = "0.6.6"
uuid = { version = "1.18.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
tak-core = { path = "../tak-core" }
tak-server-domain = { path = "../tak-server-domain" }
futures = "0.3.31"
