[package]
name = "tak-server-app"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
country-code-enum = "0.2.0"
dashmap = "6.1.0"
futures = "0.3.31"
log = "0.4.28"
more-dashmap = { path = "../more-dashmap" }
rand = "0.9.2"
rustrict = "0.7.36"
tak-core = { path = "../tak-core" }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
