[package]
name = "tak-server-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
tak-core = { path = "../tak-core" }
chrono = "0.4.42"
rand = "0.9.2"
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
lettre = "0.11.18"
moka = { version = "0.12.10", features = ["sync"] }
passwords = "3.1.16"
bcrypt = "0.17.1"
rustrict = "0.7.36"
async-trait = "0.1.89"
futures = "0.3.31"
log = "0.4.28"