[package]
name = "tak-server-http-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tak-core = { path = "../tak-core" }
tak-server-domain = { path = "../tak-server-domain" }
log = "0.4.28"
