[package]
name = "tak-auth-ory"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
tak-server-app = { path = "../../tak-server-app" }
ory-kratos-client = "25.4.0"
dashmap = "6.1.0"
moka = { version = "0.12.10", features = ["sync"] }
reqwest = { version = "0.12.28", features = ["json"] }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
