[package]
name = "tak-auth-ory"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
dashmap = "6.1.0"
log = "0.4.28"
moka = { version = "0.12.10", features = ["sync"] }
ory-kratos-client = "25.4.0"
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tak-server-app = { path = "../../tak-server-app" }
tak-server-api = { path = "../../api/tak-server-api" }
tak-server-legacy-api = { path = "../../api/tak-server-legacy-api" }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = "0.4.42"
