[package]
name = "tak-persistence-sea-orm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bcrypt = "0.17.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
moka = { version = "0.12.10", features = ["sync"] }
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
    "schema-sync",
    "entity-registry",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tak-core = { path = "../../tak-core" }
tak-server-app = { path = "../../tak-server-app" }
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
uuid = { version = "1.18.1", features = ["v4"] }
async-lock = "3.4.2"
country-code-enum = "0.2.0"
tak-persistence-sea-orm-entites = { path = "../tak-persistence-sea-orm-entites" }
