[package]
name = "tak-persistence-sea-orm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bcrypt = "0.17.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
moka = { version = "0.12.10", features = ["future"] }
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tak-core = { path = "../../domain/tak-core" }
tak-server-domain = { path = "../../domain/tak-server-domain" }
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
